cmake_minimum_required (VERSION 3.12.0)
project(spectrogram VERSION 0.01 DESCRIPTION "Library for computing time-frequency representations of time series data.")
set(VERBOSE OFF CACHE BOOL "Build verbosely")
if(VERBOSE)
  set(CMAKE_RULE_MESSAGES OFF)
  set(CMAKE_VERBOSE_MAKEFILE ON)
endif()
if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g -Werror -pedantic")
set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native")
set(CMAKE_CXX_FLAGS_DISTRIB "-O3 -mtune=generic")
set(CMAKE_CXX_FLAGS_FAT "-O3 -mtune=generic")
if(CMAKE_BUILD_TYPE STREQUAL FAT)
  SET(CMAKE_FIND_LIBRARY_SUFFIXES ".a")
  SET(CMAKE_SHARED_LINKER_FLAGS "-static-libgcc -static-libstdc++")
endif()

enable_testing()

# Find FFTW
find_path(FFTW_INCLUDE_DIR fftw3.h)
find_library(FFTW_LIBS REQUIRED NAMES fftw3)
find_library(FFTWF_LIBS REQUIRED NAMES fftw3f)
message(STATUS "FFTW include directory: ${FFTW_INCLUDE_DIR}")
message(STATUS "FFTW float library: ${FFTWF_LIBS}")
message(STATUS "FFTW double library: ${FFTW_LIBS}")

add_subdirectory(src)
add_subdirectory(tests)
add_subdirectory(examples)
add_subdirectory(docs)
add_subdirectory(bindings)
