add_library(spectrogram SHARED spectrogram.cpp stft.cpp)
set_target_properties(spectrogram PROPERTIES VERSION ${PROJECT_VERSION})
target_include_directories(spectrogram PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories(spectrogram PRIVATE "${PROJECT_SOURCE_DIR}/lib")
target_link_libraries(spectrogram ${FFTW_LIBS})
